--- a/templates/rango/add_page.html
+++ b/templates/rango/add_page.html
@@ -1,25 +1,27 @@
-<!DOCTYPE html>
-<html>
-<head>
-    <title>Add Page</title>
-</head>
-<body>
-    <h1>Add a Page to {{ category.name }}</h1>
+{% extends 'rango/base.html' %}
+{% load static %}
 
-    <form id="page_form" method="post" action="/rango/category/{{ category.slug }}/add_page/">
-        {% csrf_token %}
+{% block title_block %}
+Add a Page
+{% endblock %}
 
-        {% for hidden in form.hidden_fields %}
-            {{ hidden }}
-        {% endfor %}
+{% block body_block %}
+<h1>Add a Page</h1>
 
-        {% for field in form.visible_fields %}
-            {{ field.errors }}
-            {{ field.help_text }}<br/>
-            {{ field }}<br/><br/>
-        {% endfor %}
+<form id="page_form" method="post" action="{% url 'rango:add_page' category.slug %}">
+    {% csrf_token %}
 
-        <input type="submit" name="submit" value="Add Page" />
-    </form>
-</body>
-</html>
+    {% for hidden in form.hidden_fields %}
+        {{ hidden }}
+    {% endfor %}
+
+    {% for field in form.visible_fields %}
+        {{ field.errors }}
+        {{ field.help_text }}
+        {{ field }}
+        <br />
+    {% endfor %}
+
+    <input type="submit" name="submit" value="Add Page" />
+</form>
+{% endblock %}
