--- a/templates/rango/base.html
+++ b/templates/rango/base.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-{% load static %}
+{% load staticfiles %}
 {% load rango_template_tags %}
 
 <html>
@@ -31,6 +31,7 @@
         <li><a href="{% url 'rango:add_category' %}">Add a New Category</a></li>
         <li><a href="{% url 'rango:about' %}">About</a></li>
         <li><a href="{% url 'rango:index' %}">Index</a></li>
+        
     </ul>
 </div>
 
