--- a/templates/rango/index.html
+++ b/templates/rango/index.html
@@ -1,9 +1,10 @@
 {% extends 'rango/base.html' %}
-{% load static %}
+{% load staticfiles %}
 
 {% block title_block %}
 Homepage
 {% endblock %}
+
 
 {% block body_block %}
 <h1>Rango says...</h1>
