--- a/templates/rango/add_page.html
+++ b/templates/rango/add_page.html
@@ -8,9 +8,8 @@ Add a Page
 {% block body_block %}
 <h1>Add a Page</h1>
 
-<form id="page_form" method="post" action="{% url 'rango:add_page' category.slug %}">
+<form id="page_form" method="post" action="{% url 'rango:add_page' category_name_slug=category.slug %}">
     {% csrf_token %}
-
     {% for hidden in form.hidden_fields %}
         {{ hidden }}
     {% endfor %}
