--- a/templates/rango/about.html
+++ b/templates/rango/about.html
@@ -12,8 +12,9 @@
             <strong> This tutorial has been put together by {{ name }}.</strong><br /> 
         </div>
         <div>
-            <a href="/rango/index/">Index</a><br />
-            <img src="{{ MEDIA_URL }}Cat.jpg" alt="Picture of a Cat" />
+            <a href='/rango/'>Index</a><br />
+            <img src="{% static 'images/rango.jpg' %}" alt="Picture of Rango" />
+            <img src="{{MEDIA_URL}}cat.jpg" alt="Picture of a Cat" />
         </div> 
     </body>
 </html>
