--- a/templates/rango/index.html
+++ b/templates/rango/index.html
@@ -17,6 +17,7 @@ Homepage
     {% endif %}
 
     <strong>{{ boldmessage }}</strong><br />
+    <a href="/rango/about/">About</a><br />
 </div>
 
 <div>
