--- a/templates/rango/about.html
+++ b/templates/rango/about.html
@@ -5,10 +5,9 @@ About Rango
 {% endblock %}
 
 {% block body_block %}
-<h1>Rango says...</h1>
+<h1>Rango says here is the about page.</h1>
 
 <div>
-    here is the about page. <br />
     <strong>This tutorial has been put together by {{ name }}.</strong><br />
 </div>
 
