--- a/templates/rango/index.html
+++ b/templates/rango/index.html
@@ -7,7 +7,7 @@ Homepage
 
 
 {% block body_block %}
-<h1>Rango says</h1>
+<h1>Rango says hey there partner!</h1>
 
 <div>
     {% if user.is_authenticated %} 
@@ -51,6 +51,6 @@ Homepage
 </div>
 
 <div>
-    <img src="{% static 'images/Rango.JPG' %}" alt="Picture of Rango" />
+    <img src="{% static 'images/rango.jpg' %}" alt="Picture of Rango" />
 </div>
 {% endblock %}
