--- a/templates/rango/index.html
+++ b/templates/rango/index.html
@@ -27,6 +27,7 @@ Homepage
         {% for category in categories %}
             <li>
                 <a href="{% url 'rango:show_category' category.slug %}">{{ category.name }}</a>
+                <a href="/rango/add_category/">
             </li>
         {% endfor %}
         </ul>
