--- a/templates/rango/base.html
+++ b/templates/rango/base.html
@@ -14,13 +14,19 @@
 <body>
 
 <div>
-    {% block body_block %}
+    {% block sidebar_block %}
+        {% if category %}
+            {% get_category_list category %}
+        {% else %}
+            {% get_category_list %}
+        {% endif %}
     {% endblock %}
 </div>
 
+<hr />
+
 <div>
-    {% block sidebar_block %}
-        {% get_category_list category %}
+    {% block body_block %}
     {% endblock %}
 </div>
 
@@ -29,12 +35,12 @@
 <div>
     <ul>
         {% if user.is_authenticated %}
-        <li><a href="{% url 'rango:restricted' %}">Restricted Page</a></li>
-        <li><a href="{% url 'rango:logout' %}">Logout</a></li>
-        <li><a href="{% url 'rango:add_category' %}">Add a New Category</a></li>
-        {%else%}
-        <li><a href="{% url 'rango:register' %}">Sign Up</a></li>
-        <li><a href="{% url 'rango:login' %}">Login</a></li> 
+            <li><a href="{% url 'rango:restricted' %}">Restricted Page</a></li>
+            <li><a href="{% url 'rango:logout' %}">Logout</a></li>
+            <li><a href="{% url 'rango:add_category' %}">Add a New Category</a></li>
+        {% else %}
+            <li><a href="{% url 'rango:register' %}">Sign Up</a></li>
+            <li><a href="{% url 'rango:login' %}">Login</a></li>
         {% endif %}
         <li><a href="{% url 'rango:about' %}">About</a></li>
         <li><a href="{% url 'rango:index' %}">Index</a></li>
@@ -43,4 +49,3 @@
 
 </body>
 </html>
-
