--- a/templates/rango/index.html
+++ b/templates/rango/index.html
@@ -27,7 +27,6 @@ Homepage
         {% for category in categories %}
             <li>
                 <a href="{% url 'rango:show_category' category.slug %}">{{ category.name }}</a>
-                <a href="/rango/add_category/">
             </li>
         {% endfor %}
         </ul>
@@ -52,6 +51,7 @@ Homepage
 </div>
 
 <div>
+    <a href="/rango/add_category/">Add a New Category</a><br />
     <img src="{% static 'images/rango.jpg' %}" alt="Picture of Rango" />
 </div>
 {% endblock %}
