--- a/templates/rango/category.html
+++ b/templates/rango/category.html
@@ -23,10 +23,9 @@
         {% endif %}
 
         <br />
-        {% if category %}
-        <a href="{% url 'rango:add_page' category.slug %}">Add Page</a><br />
+        {% if user.is_authenticated %}
+         <a href="{% url 'rango:add_page' category_name_slug=category.slug %}">Add Page</a>
         {% endif %}
-
         <br />
         <a href="{% url 'rango:index' %}">Back to Homepage</a>
 
