--- a/templates/rango/index.html
+++ b/templates/rango/index.html
@@ -7,7 +7,7 @@ Homepage
 
 
 {% block body_block %}
-<h1>Rango says hey there partner!</h1>
+<h1>Rango says...</h1>
 
 <div>
     {% if user.is_authenticated %} 
@@ -17,7 +17,6 @@ Homepage
     {% endif %}
 
     <strong>{{ boldmessage }}</strong><br />
-    <a href="/rango/about/">About</a><br />
 </div>
 
 <div>
@@ -51,7 +50,6 @@ Homepage
 </div>
 
 <div>
-    <a href="/rango/add_category/">Add a New Category</a><br />
-    <img src="{% static 'images/rango.jpg' %}" alt="Picture of Rango" />
+    <img src="{% static 'images/Rango.JPG' %}" alt="Picture of Rango" />
 </div>
 {% endblock %}
