Chapter 10 finished and success?

--- a/templates/rango/about.html
+++ b/templates/rango/about.html
@@ -6,7 +6,7 @@ About Rango
 {% endblock %}
 
 {% block body_block %}
-<h1>Rango says...</h1>
+<h1>Rango says..</h1>
 
 <div>
     here is the about page. <br />
@@ -14,6 +14,8 @@ About Rango
 </div>
 
 <div>
-    <img src="{{ MEDIA_URL }}Cat.jpg" alt="Picture of a Cat" />
+    <p>Visits: {{ visits }}</p>
+    <img src="{{ MEDIA_URL }}cat.jpg" alt="Picture of a Cat" />
+    <img src="{% static 'images/rango.png' %}" alt ="Picture of Rango"/>
 </div>
 {% endblock %}
